--- a/common-components/ui-components/DataTable/DataTable.scss
+++ b/common-components/ui-components/DataTable/DataTable.scss
@@ -30,6 +30,14 @@
     position: relative;
   }
 
+  &--sticky-header {
+    th {
+      background-color: get-color(white);
+      border-bottom-color: transparent;
+      box-shadow: inset 0 -1px 0 get-color(black-coral-10);
+    }
+  }
+
   td {
     padding: 12px 24px 12px 16px;
     border-bottom: 1px solid get-color(black-coral-2);
